# tauri-app-exmaple

./: package.json  pnpm-lock.yaml
src/: App.vue  PredefinedMenuItem.vue
src-tauri/: Cargo.toml
src-tauri/src/: chane-menu  change-menu-status.rs  main.rs  multi-level-menu.rs  multi-level.rs
